# JustPlayer

./: .gitmodules  README.md
android/JustPlayerLib/src/main/cpp/: CMakeLists.txt  JustApi.cpp  JustData.h  JustJniApi.cpp
android/JustPlayerLib/src/main/cpp/FFMPEGPlayer/: CMakeLists.txt
android/JustPlayerLib/src/main/cpp/FFMPEGPlayer/ffmpeginc/: adapter_ff.sh
android/JustPlayerLib/src/main/cpp/FFMPEGPlayer/ffmpeginc/libavcodec/: avcodec.h  avcodec.h.bak  packet.h
android/JustPlayerLib/src/main/cpp/FFMPEGPlayer/ffmpeginc/libavutil/: detection_bbox.h  frame.h  hwcontext.h  intreadwrite.h.bak  mem.h  pixfmt.h.bak  video_enc_params.h.bak
android/JustPlayerLib/src/main/cpp/FFMPEGPlayer/player/: FFMPEGPlayer.cpp  FFMPEGPlayer.h  IDataReader.cpp  IDataReader.h  LocalDataReader.h
android/JustPlayerLib/src/main/cpp/FFMPEGPlayer/player/audio/: AndroidAudioTrackEngine.h  AudioBaseEngine.h  AudioConst.h  AudioEventHandle.cpp  AudioEventHandle.h
android/JustPlayerLib/src/main/cpp/FFMPEGPlayer/player/data/: AudioObj.h  FFObj.h  FFinc.h  SubtitleObj.cpp  VideoObj.cpp
android/JustPlayerLib/src/main/cpp/FFMPEGPlayer/player/decodec/: AudioDecodec.cpp  PlayerHandler.cpp
android/JustPlayerLib/src/main/cpp/JustPlayer/: JustMediaCodecPlayer.cpp  JustMediaCodecPlayer.h
android/JustPlayerLib/src/main/cpp/base/: CMakeLists.txt  IJustPlayer.h
android/JustPlayerLib/src/main/cpp/base/const/: endian.h
android/JustPlayerLib/src/main/cpp/base/cpptest/: InvokeMain.cpp  InvokeMain.h
android/JustPlayerLib/src/main/cpp/base/log/: LogUtil.h
android/JustPlayerLib/src/main/cpp/base/net/: SocketBase.h  SocketHandler.h  TickTime.h  TimerHandler.h  common.h
android/JustPlayerLib/src/main/cpp/base/statemachine/: StateMachine.h
android/JustPlayerLib/src/main/cpp/base/thread/: TimerPool.h  XThread.cpp
android/JustPlayerLib/src/main/cpp/base/util/: JniHelper.cpp  Lock.cpp  Lock.h  LogUtil.h  Util.h
android/JustPlayerLib/src/main/cpp/base/util/protocol/: BlockBuffer.h
android/JustPlayerLib/src/main/cpp/base/util/statemachine/: State.cpp  StateMachine.h
android/JustPlayerLib/src/main/cpp/base/util/thread/: TimerPool.cpp  TimerPool.h  XThread.h
android/JustPlayerLib/src/main/cpp/config/: constants.h  endian.h
android/JustPlayerLib/src/main/cpp/data/: BlockBuffer.h  Varstr.h  package.h
android/JustPlayerLib/src/main/cpp/justplayer/: CMakeLists.txt
android/JustPlayerLib/src/main/cpp/justplayer/ffmpeginc/: temp.sh
android/JustPlayerLib/src/main/cpp/justplayer/ffmpeginc/libavcodec/: codec.h.bak.bak  packet.h.bak
android/JustPlayerLib/src/main/cpp/justplayer/ffmpeginc/libavdevice/: avdevice.h.bak.bak
android/JustPlayerLib/src/main/cpp/justplayer/ffmpeginc/libavfilter/: avfilter.h.bak
android/JustPlayerLib/src/main/cpp/justplayer/ffmpeginc/libavformat/: avformat.h.bak  avformat.h.bak.bak  avformat.h.bak.bak.bak  avio.h.bak
android/JustPlayerLib/src/main/cpp/justplayer/ffmpeginc/libavutil/: common.h  hwcontext_opencl.h
android/JustPlayerLib/src/main/cpp/justplayer/player/: JustConfig.h  JustPlayer.cpp  JustPlayer.h  LocalDataReader.cpp  LocalDataReader.h  PlayerEventHandler.h
android/JustPlayerLib/src/main/cpp/justplayer/player/audio/: AudioBaseEngine.h  AudioOpenSLESEngine.cpp
android/JustPlayerLib/src/main/cpp/justplayer/player/data/: FFObj.h  FFinc.h  VideoObj.h  VideoState.cpp  VideoState.h
android/JustPlayerLib/src/main/cpp/justplayer/player/decodec/: AudioDecodec.h  PlayerHandler.h
android/JustPlayerLib/src/main/cpp/net/: Sellector_Epoll.cpp  SocketBase.cpp  SocketBase.h  TickTime.h  common.h
android/JustPlayerLib/src/main/cpp/util/: JniHelper.h  LogUtil.h  Util.h
android/JustPlayerLib/src/main/cpp/util/thread/: HandleThread.h  IEventHandler.h  TimerPool.h  XThread.cpp
android/ffplayer/src/main/cpp/base/cpptest/: CMakeLists.txt  InvokeMain.cpp  InvokeMain.h
android/ffplayer/src/main/cpp/ffmpeg/: CMakeLists.txt
android/ffplayer/src/main/cpp/ffmpeg/ffmpeginc/libavcodec/: avfft.h  codec.h.bak.bak  codec_desc.h  codec_id.h  codec_id.h.bak  codec_par.h  codec_par.h.bak  packet.h.bak  packet.h.bak.bak  qsv.h  qsv.h.bak  vdpau.h.bak
android/ffplayer/src/main/cpp/ffmpeg/ffmpeginc/libavdevice/: avdevice.h.bak.bak
android/ffplayer/src/main/cpp/ffmpeg/ffmpeginc/libavfilter/: avfilter.h.bak  avfilter.h.bak.bak  buffersink.h
android/ffplayer/src/main/cpp/ffmpeg/ffmpeginc/libavformat/: avformat.h  avformat.h.bak  avio.h  avio.h.bak  avio.h.bak.bak
android/ffplayer/src/main/cpp/ffmpeg/ffmpeginc/libavutil/: avutil.h  buffer.h  common.h  film_grain_params.h  hwcontext_d3d11va.h  hwcontext_drm.h  hwcontext_dxva2.h  hwcontext_opencl.h  imgutils.h  intreadwrite.h  mastering_display_metadata.h  opt.h  pixfmt.h  spherical.h  stereo3d.h  video_enc_params.h
android/ffplayer/src/main/cpp/ffmpeg/player/: AudioThread.cpp  AudioThread.h  FFPlayer.cpp  FFPlayer.h  FFPlayerOptions.h  FFinc.h  LocalDataReader.cpp  LocalDataReader.h  MyFFPlayer.cpp  MyFFPlayer.h  PlayerEventHandler.h  ReadThread.cpp  ReadThread.h  StreamThread.cpp  StreamThread.h  Subtitlethread.cpp  Subtitlethread.h  VideoThread.cpp  VideoThread.h
android/ffplayer/src/main/cpp/ffmpeg/player/audio/: AudioBaseEngine.h
android/ffplayer/src/main/cpp/ffmpeg/player/config/: FFConfig.h  FFPlayerOptions.h  FFdef.h
android/ffplayer/src/main/cpp/ffmpeg/player/data/: Aout.cpp  Aout.h  AudioParams.h  Clock.cpp  Clock.h  Decoder.cpp  Decoder.h  FFDemuxCacheControl.cpp  FFDemuxCacheControl.h  FFMsg.h  FFObj.h  FFPipenode.cpp  FFPipenode.h  FFinc.h  Frame.cpp  Frame.h  FrameQueue.cpp  FrameQueue.h  MediaState.cpp  MediaState.h  MessageQueue.cpp  MessageQueue.h  MyAVPacketList.h  PacketQueue.cpp  PacketQueue.h  SpeedSampler.cpp  SubtitleObj.cpp  SubtitleObj.h  VideoState.cpp  VideoState.h  Vout.cpp  Vout.h
android/ffplayer/src/main/cpp/ffmpeg/player/data/audio/: AudioObj.cpp  AudioObj.h
android/ffplayer/src/main/cpp/ffmpeg/player/data/mediacodec/: MediaCodecBuffer.cpp  MediaCodecBuffer.h  MediaCodecBufferInfo.h  (+1 more)
android/ffplayer/src/main/cpp/ffmpeg/player/decodec/: AudioDecodec.cpp  AudioDecodec.h  PlayerHandler.h
(+228 files in other folders)
